Change CLI test script path

--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -63,4 +63,4 @@ jobs:
     - name: Test CLI
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      run: ../test/cli/run.sh
+      run: ${{runner.workspace}}/test/cli/run.sh
