--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -16,6 +16,9 @@ jobs:
     - name: Install clang-format
       shell: bash
       run: |
+          sudo apt-get update
+          sudo apt-get install launchpad-getkeys
+          sudo launchpad-getkeys
           sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main"
           sudo apt-get update
           sudo apt-get install -y clang-format-9
