--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -16,10 +16,8 @@ jobs:
     - name: Install clang and clang-tidy
       shell: bash
       run: |
-          sudo apt-get update
-          sudo apt-get install launchpad-getkeys
-          sudo launchpad-getkeys
           sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
           sudo apt-get update
           sudo apt-get install -y clang-10 clang-tidy-10
           sudo apt-get install -y libtool m4 autoconf
