Remove libstdc++-10 if run with clang-6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,7 @@ jobs:
           if [ "${cc}" = "clang-6.0" ]; then
             # Problems compiling with Clang 6 against libstdc++-9
             sudo apt-get remove libstdc++-9-dev libgcc-9-dev cpp-9
+            sudo apt-get remove libstdc++-10-dev libgcc-10-dev cpp-10
           fi
           sudo apt-get update
           sudo apt-get install -y libtool m4 autoconf
