--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,14 @@ jobs:
           cxx="${cxx/gcc/g++}"
 
           if [ "${cc}" = "clang-10" ]; then
+            wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
             sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
+            sudo apt-get remove libstdc++-10-dev libgcc-10-dev cpp-10
           fi
           if [ "${cc}" = "clang-6.0" ]; then
             # Problems compiling with Clang 6 against libstdc++-9
             sudo apt-get remove libstdc++-9-dev libgcc-9-dev cpp-9
+            sudo apt-get remove libstdc++-10-dev libgcc-10-dev cpp-10
           fi
           sudo apt-get update
           sudo apt-get install -y libtool m4 autoconf
