--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -16,10 +16,12 @@ jobs:
     - name: Install clang and clang-tidy
       shell: bash
       run: |
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
           sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
           sudo apt-get update
           sudo apt-get install -y clang-10 clang-tidy-10
           sudo apt-get install -y libtool m4 autoconf
+          sudo apt-get remove libstdc++-10-dev libgcc-10-dev cpp-10
           echo "::set-env name=CC::clang-10"
           echo "::set-env name=CXX::clang++-10"
 
