--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,21 +67,21 @@ jobs:
           else
               sudo apt-get install -y "${cc}"
           fi
-          echo "::set-env name=CC::${cc}"
-          echo "::set-env name=CXX::${cxx}"
+          echo "CC=${cc}" >> $GITHUB_ENV
+          echo "CXX=${cxx}" >> $GITHUB_ENV
     - name: Install (macOS)
       if: runner.os == 'macOS'
       run: |
           brew install autoconf automake libtool cmake
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
-            echo "::set-env name=CC::gcc-${{ matrix.version }}"
-            echo "::set-env name=CXX::g++-${{ matrix.version }}"
+            echo "CC=gcc-${{ matrix.version }}" >> $GITHUB_ENV
+            echo "CXX=g++-${{ matrix.version }}" >> $GITHUB_ENV
           else
             sudo xcode-select -switch /Applications/Xcode_${{ matrix.version }}.app
-            echo "::set-env name=CC::$(xcrun -f clang)"
-            echo "::set-env name=CXX::$(xcrun -f clang++)"
-            echo "::set-env name=SDKROOT::$(xcodebuild -version -sdk macosx Path)"
-            echo "::set-env name=PATH::$(dirname $(xcrun -f clang)):$PATH"
+            echo "CC=$(xcrun -f clang)" >> $GITHUB_ENV
+            echo "CXX=$(xcrun -f clang++)" >> $GITHUB_ENV
+            echo "SDKROOT=$(xcodebuild -version -sdk macosx Path)" >> $GITHUB_ENV
+            echo "PATH=$(dirname $(xcrun -f clang)):$PATH" >> $GITHUB_ENV
           fi
     - name: Create Build Environment
       shell: bash
