--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
             sudo apt-get remove libstdc++-9-dev libgcc-9-dev cpp-9
             sudo apt-get remove libstdc++-10-dev libgcc-10-dev cpp-10
           fi
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+          sudo add-apt-repository -y 'deb http://mirror.plusserver.com/ubuntu/ubuntu/ bionic-updates main restricted universe multiverse'
           sudo apt-get update
           sudo apt-get install -y libtool m4 autoconf
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
