--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,9 @@ jobs:
           sudo add-apt-repository -y 'deb http://mirror.plusserver.com/ubuntu/ubuntu/ bionic-updates main restricted universe multiverse'
           sudo apt-get update
           sudo apt-get install -y libtool m4 autoconf
-          if [ "${{ matrix.compiler }}" = "gcc" ]; then
+          if [ "${cc}" = "gcc" ]; then
+              sudo apt-get install -y g++-7/bionic-updates
+          elif [ "${{ matrix.compiler }}" = "gcc" ]; then
               sudo apt-get install -y "${cxx}"
           else
               sudo apt-get install -y "${cc}"
