--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
           if [ "${{ matrix.compiler }}" = "gcc" ]; then
               sudo apt-get install -y "${cxx}"
           else
+              echo "TOOLCHAIN='-DCMAKE_TOOLCHAIN_FILE=clang.cmake'" >> $GITHUB_ENV
               sudo apt-get install -y "${cc}"
           fi
           echo "CC=${cc}" >> $GITHUB_ENV
@@ -91,7 +92,7 @@ jobs:
     - name: Configure
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=Debug -DPISA_BUILD_TOOLS=ON ..
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=Debug -DPISA_BUILD_TOOLS=ON $TOOLCHAIN ..
 
     - name: Build
       shell: bash
