--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -14,13 +14,12 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Bulid docker image
+      working-directory: ${{runner.workspace}}/pisa/test/docker/tidy
       shell: bash
       run: |
           pwd
-          ls
-          cd ${{runner.workspace}}/test/docker/tidy
           docker build . -t tidy-image
-          docker run --name tidy -v ${{runner.workspace}}:/pisa -d --rm -it tidy-image
+          docker run --name tidy -v ${{runner.workspace}}/pisa:/pisa -d --rm -it tidy-image
 
     - name: Create Build Environment
       shell: bash
