--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Configure
       shell: bash
-      run: docker exec -w /pisa/build tidy cmake /pisa \
+      run: docker exec -w /pisa/build tidy cmake .. \
             -DCMAKE_BUILD_TYPE=Debug \
             -DPISA_BUILD_TOOLS=ON \
             -DPISA_ENABLE_CLANG_TIDY=ON \
