--- a/test/docker/tidy/Dockerfile
+++ b/test/docker/tidy/Dockerfile
@@ -5,4 +5,4 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/New_York
 
 RUN apt-get update -y
-RUN apt-get install -y clang clang-tidy libc++-dev libc++abi-dev libtool cmake
+RUN apt-get install -y clang clang-tidy libc++-dev libc++abi-dev libtool cmake git
