--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Configure
       shell: bash
-      run: docker exec -w /pisa/build tidy cmake .. -DCMAKE_BUILD_TYPE=Debug -DPISA_BUILD_TOOLS=ON -DPISA_ENABLE_CLANG_TIDY=ON -DCMAKE_TOOLCHAIN_FILE=clang.cmake -DPISA_CLANG_TIDY_EXECUTABLE=clang-tidy
+      run: docker exec -w /pisa/build tidy cmake .. -DCMAKE_BUILD_TYPE=Debug -DPISA_BUILD_TOOLS=ON -DPISA_ENABLE_CLANG_TIDY=ON -DCMAKE_TOOLCHAIN_FILE=clang.cmake -DPISA_CLANG_TIDY_EXECUTABLE=clang-tidy -DPISA_CI_BUILD=ON
 
     - name: Build
       shell: bash
